<resources>
    <string name="app_name">PoorCalc</string>
    <string name="b9">9</string>
    <string name="b8">8</string>
    <string name="b7">7</string>
    <string name="b6">6</string>
    <string name="b5">5</string>
    <string name="b4">4</string>
    <string name="b3">3</string>
    <string name="b2">2</string>
    <string name="b1">1</string>
    <string name="b0">0</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string name="ce">ce</string>
    <string name="equals">=</string>
    <string name="power">^</string>
    <string name="root">√</string>
    <string name="clear">C</string>
    <string name="all_clear">AC</string>
    <string name="comma">,</string>
    <string name="percent">%</string>
    <string name="bracket_left">(\t</string>
    <string name="bracket_right">\t)</string>
    <string name="ac">AC</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="faculty">n!</string>
    <string name="binary">bin</string>
    <string name="format">format</string>
    <string name="history">history</string>
    <string name="get_back">get_back</string>
    <string name="get_last">last</string>
    <string name="copied_to_clipboard">copied to clipboard</string>
    <string name="ee42">life, the universe and everything</string>
    <string name="nice">nice</string>
    <string name="exception_divide_by_zero">Divided by zero</string>
    <string name="exception_missing_formula">Missing formula</string>
    <string name="exception_bad_expression">Bad expression</string>
    <string name="copyright">©</string>
    <string name="info">© Anton \'PoorSkill\' Kesy</string>
</resources>